--- a/tokyo2020paralympics2.ipynb
+++ b/tokyo2020paralympics2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bfd78023",
+   "id": "aeb49a2b",
    "metadata": {},
    "source": [
     "# Tokyo 2020 Paralympics"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cdf53392",
+   "id": "9c17bb57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3056031",
+   "id": "bcb9009a",
    "metadata": {},
    "source": [
     "#### Importing dataframe, analysing and cleaning data"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "66c25efc",
+   "id": "c8399556",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "45aee1d7",
+   "id": "58f623d3",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c199af07",
+   "id": "8a6c1b94",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2a79e46f",
+   "id": "e3ce72aa",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ba91b259",
+   "id": "e90add10",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "435a1ce0",
+   "id": "eda71b1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3e1d2a4c",
+   "id": "6d4dbbac",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0ed63238",
+   "id": "86f6b842",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "edbb4ec7",
+   "id": "d28c2a13",
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5bab7709",
+   "id": "270ef084",
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5b800667",
+   "id": "da4b7a45",
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1219,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "916907d4",
+   "id": "167f182c",
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0157da6f",
+   "id": "ae4de073",
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e17931a3",
+   "id": "af26645f",
    "metadata": {},
    "outputs": [
     {
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6cfe654d",
+   "id": "b39fa64c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "be935afe",
+   "id": "c8171375",
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1476,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3b14b2c2",
+   "id": "8e8d17ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1487,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "40fca3a1",
+   "id": "d1462ae1",
    "metadata": {},
    "outputs": [
     {
@@ -1597,7 +1597,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ccdf9ecd",
+   "id": "2b4920dd",
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "99c77eac",
+   "id": "87ae6b39",
    "metadata": {},
    "outputs": [
     {
@@ -1645,28 +1645,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "daa58490",
+   "cell_type": "markdown",
+   "id": "056eaad7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "title        object\n",
-       "playcount     int64\n",
-       "date         object\n",
-       "devices      object\n",
-       "traffic      object\n",
-       "content      object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "tokyo2020.dtypes"
    ]
@@ -1674,7 +1655,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d345a313",
+   "id": "6e58a084",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1685,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8b45b538",
+   "id": "9ca11573",
    "metadata": {},
    "outputs": [
     {
@@ -1712,7 +1693,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d9ab667c",
+   "id": "68acb1f9",
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1871,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a323b595",
+   "id": "33b72957",
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1905,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "794555a4",
+   "id": "5ce53ff3",
    "metadata": {},
    "outputs": [
     {
@@ -1955,9 +1936,417 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7a7d07b",
+   "metadata": {},
+   "source": [
+    "# Web Scraping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8d5ffe4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "medals = requests.get('https://www.bbc.com/sport/disability-sport/58267874')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5935e259",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "medals = requests.get('https://www.bbc.com/sport/disability-sport/58267874')\n",
+    "gold = bs(medals.content, 'lxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "382a7b69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = gold.find(\"table\", {\"class\":\"gs-o-table story-body__table\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9dd66e7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gold = pd.read_html(str(table))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "2857bba1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Gold</th>\n",
+       "      <th>Silver</th>\n",
+       "      <th>Bronze</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>China</td>\n",
+       "      <td>96</td>\n",
+       "      <td>60</td>\n",
+       "      <td>51</td>\n",
+       "      <td>207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Great Britain</td>\n",
+       "      <td>41</td>\n",
+       "      <td>38</td>\n",
+       "      <td>45</td>\n",
+       "      <td>124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>37</td>\n",
+       "      <td>36</td>\n",
+       "      <td>31</td>\n",
+       "      <td>104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>RPC</td>\n",
+       "      <td>36</td>\n",
+       "      <td>33</td>\n",
+       "      <td>49</td>\n",
+       "      <td>118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>25</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rank        Country  Gold  Silver  Bronze  Total\n",
+       "0     1          China    96      60      51    207\n",
+       "1     2  Great Britain    41      38      45    124\n",
+       "2     3            USA    37      36      31    104\n",
+       "3     4            RPC    36      33      49    118\n",
+       "4     5    Netherlands    25      17      17     59"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gold.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a2860cf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rank        int64\n",
+       "Country    object\n",
+       "Gold        int64\n",
+       "Silver      int64\n",
+       "Bronze      int64\n",
+       "Total       int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gold.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "50ede84a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gold_ireland = gold[(gold['Total'] < 10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "edd35d8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Gold</th>\n",
+       "      <th>Silver</th>\n",
+       "      <th>Bronze</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Israel</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Belarus</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>32</td>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>34</td>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>35</td>\n",
+       "      <td>Cuba</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Rank       Country  Gold  Silver  Bronze  Total\n",
+       "21    22        Israel     6       2       1      9\n",
+       "26    27       Belarus     5       1       1      7\n",
+       "31    32       Ireland     4       2       1      7\n",
+       "33    34  South Africa     4       1       2      7\n",
+       "34    35          Cuba     4       1       1      6"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gold_ireland.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "606ad0ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gold_ireland_labelled = gold_ireland.set_index('Rank') #Use function to change index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c028b279",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Gold</th>\n",
+       "      <th>Silver</th>\n",
+       "      <th>Bronze</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rank</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Israel</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Belarus</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Cuba</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Country  Gold  Silver  Bronze  Total\n",
+       "Rank                                           \n",
+       "22          Israel     6       2       1      9\n",
+       "27         Belarus     5       1       1      7\n",
+       "32         Ireland     4       2       1      7\n",
+       "34    South Africa     4       1       2      7\n",
+       "35            Cuba     4       1       1      6"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gold_ireland_labelled.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5509d46",
+   "id": "3817ec2e",
    "metadata": {},
    "outputs": [],
    "source": []
