--- a/webscraping.ipynb
+++ b/webscraping.ipynb
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bc15c6b0",
+   "id": "7d856f3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "624c0c45",
+   "id": "ef26d52a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "261fb81b",
+   "id": "b1af5f62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,8 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "82e23869",
+   "execution_count": 11,
+   "id": "d96db958",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gold = pd.read_html(str(table))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4bbba883",
    "metadata": {},
    "outputs": [
     {
@@ -142,95 +152,59 @@
        "      <td>17</td>\n",
        "      <td>59</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>78</td>\n",
-       "      <td>Montenegro</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>78</td>\n",
-       "      <td>Oman</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>78</td>\n",
-       "      <td>Qatar</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>78</td>\n",
-       "      <td>Chinese Taipei</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>78</td>\n",
-       "      <td>Uganda</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>86 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Rank         Country  Gold  Silver  Bronze  Total\n",
-       "0      1           China    96      60      51    207\n",
-       "1      2   Great Britain    41      38      45    124\n",
-       "2      3             USA    37      36      31    104\n",
-       "3      4             RPC    36      33      49    118\n",
-       "4      5     Netherlands    25      17      17     59\n",
-       "..   ...             ...   ...     ...     ...    ...\n",
-       "81    78      Montenegro     0       0       1      1\n",
-       "82    78            Oman     0       0       1      1\n",
-       "83    78           Qatar     0       0       1      1\n",
-       "84    78  Chinese Taipei     0       0       1      1\n",
-       "85    78          Uganda     0       0       1      1\n",
-       "\n",
-       "[86 rows x 6 columns]"
+       "   Rank        Country  Gold  Silver  Bronze  Total\n",
+       "0     1          China    96      60      51    207\n",
+       "1     2  Great Britain    41      38      45    124\n",
+       "2     3            USA    37      36      31    104\n",
+       "3     4            RPC    36      33      49    118\n",
+       "4     5    Netherlands    25      17      17     59"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_html(str(table))[0]"
+    "gold.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "970ed0b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Rank        int64\n",
+       "Country    object\n",
+       "Gold        int64\n",
+       "Silver      int64\n",
+       "Bronze      int64\n",
+       "Total       int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gold.dtypes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fab14b9",
+   "id": "ffbd6d4e",
    "metadata": {},
    "outputs": [],
    "source": []
