rollback to working notebook

--- a/tokyo2020paralympics2.ipynb
+++ b/tokyo2020paralympics2.ipynb
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "c8171375",
    "metadata": {},
    "outputs": [
@@ -1431,7 +1431,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1339 rows × 6 columns</p>\n",
+       "<p>1334 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1461,10 +1461,10 @@
        "1337      Tablet  Direct traffic  IH000403385  \n",
        "1338     Desktop       News feed  IH000403385  \n",
        "\n",
-       "[1339 rows x 6 columns]"
+       "[1334 rows x 6 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1596,12 +1596,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "2b4920dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title        0.0\n",
+       "playcount    0.0\n",
+       "date         0.0\n",
+       "devices      0.0\n",
+       "traffic      0.0\n",
+       "content      0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tokyo2020 = tokyo2020.isnull().sum() / tokyo2020.shape[0] * 100"
+    "tokyo2020.isnull().sum() / tokyo2020.shape[0] * 100"
    ]
   },
   {
@@ -1628,48 +1645,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "37f08e38",
+   "cell_type": "markdown",
+   "id": "056eaad7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Timestamp' object has no attribute 'dtypes'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-db82a089e55f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtokyo2020\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Timestamp' object has no attribute 'dtypes'"
-     ]
-    }
-   ],
    "source": [
     "tokyo2020.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "6e58a084",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'Timestamp' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-373a0871adf8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Converting date to a datetime object\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtokyo2020\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokyo2020\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'Timestamp' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Converting date to a datetime object \n",
-    "tokyo2020['date'] = pd.to_datetime(tokyo2020['date'])"
+    "tokyo2020['date'] = pd.to_datetime(tokyo2020['date']) #Convert column to a datetime object using Panda"
    ]
   },
   {
@@ -1942,28 +1933,6 @@
    ],
    "source": [
     "tokyo2020['date'].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "2992b82c",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Timestamp' object has no attribute 'dtypes'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-db82a089e55f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtokyo2020\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Timestamp' object has no attribute 'dtypes'"
-     ]
-    }
-   ],
-   "source": [
-    "\n"
    ]
   },
   {
@@ -2377,7 +2346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0861dfd",
+   "id": "3817ec2e",
    "metadata": {},
    "outputs": [],
    "source": []
